[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "chainlit>=2.6.9",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.5",
    "openai>=1.99.9",
    "rich>=14.1.0",
    "textual>=5.3.0",
]
